# particles2d

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  Particles.cfg  README.md  architecture.dia  buildInDocker.sh  buildWithCMake.sh  constants.h  execDockerContainer.sh  main.cpp  makefile  particle.cpp  particle.h  particles.cpp  particles.h  particlesview.cpp  particlesview.h  particlesviewinterface.h  particlesviewsdladapter.cpp  particlesviewsdladapter.h  runDocker.sh  runInDocker.sh  xwindows.cpp  xwindows.h
include/: rnd.h
plugin/: DemoPresenter.h  UserInput.h
source/: Config.cpp  Config.h  Constants.h  Particle.cpp  Particle.h  ParticleDrawer.cpp  ParticleDrawer.h  ParticleManager.cpp  ParticleManager.h  Particles.cpp  Particles.h  ParticlesView.cpp  ParticlesView.h  ParticlesViewSdlAdapter.cpp  ParticlesViewSdlAdapter.h  Physics.cpp  Physics.h  Presenter.cpp  Presenter.h  RGBData.cpp  RGBData.h  UserInput.cpp  UserInput.h  Vector.h  XWindows.cpp  XWindows.h  main.cpp
source/interfaces/: IModel.h  IParticlesView.h  IPresenter.h  IUserInput.h  ParticlesViewInterface.h  Rnd.h
